k8s/infra/platform/traefik/overlays/dev/traefik-cr.yaml
apiVersion: traefik.io/v1alpha1
kind: IngressRoute

metadata:
  name: traefik-dashboard
spec:
  entryPoints:
    - https
  routes:
    - match: Host(`tma.com`) && (PathPrefix(`/api`) || PathPrefix(`/dashboard`))
      kind: Rule
      services:
        - name: api@internal
          kind: TraefikService
  tls:
    secretName: traefik-tls
    options:
      name: tls-options
